--- a/class-04/demo/index.html
+++ b/class-04/demo/index.html
@@ -18,15 +18,15 @@
         </nav>
     </header>
     <section>
-        <img src="https://images.unsplash.com/photo-1519861531473-9200262188bf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80"/>
+        <img alt="basketball" src="https://images.unsplash.com/photo-1519861531473-9200262188bf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80"/>
         <p>you’re going to look so cool in our gear. lorem ipsum. blah blah blah fdsjdksjflkfj lkjf sdklfjkdf jsdklf jdsflkdj fklsdj ksl jdlskfjslk jkjflk foeifeow cokmlk mc lkkl fjl dlasmdks aldjslk djklsjslkf </p>
     </section>
     <section>
-        <img src="https://images.unsplash.com/photo-1533681018184-68bd1d883b97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1031&q=80"/>
+        <img alt="basketball-shoes" src="https://images.unsplash.com/photo-1533681018184-68bd1d883b97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1031&q=80"/>
         <p><a href="/">Shoes</a></p>
-        <img src="https://images.unsplash.com/photo-1655089131279-8029e8a21ac6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1093&q=80"/>
+        <img alt="basketball-jerseys" src="https://images.unsplash.com/photo-1655089131279-8029e8a21ac6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1093&q=80"/>
         <p><a href="#">Jerseys</a></p>
-        <img src="https://images.unsplash.com/photo-1581236195872-c53e78da0043?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"/>
+        <img alt="basketball-hoop" src="https://images.unsplash.com/photo-1581236195872-c53e78da0043?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"/>
         <p><a href="#">Accessories</a></p>
     </section>
     <footer>
